now all DAOs use the check NotFoundException changed and improved tests for the tests to stop a LearningProcess now POST instead of GET is used.